scraper fetched creation date on openrouter, used by the app to show models sorted from most recent to oldest within each family

--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -28,6 +28,6 @@ COPY data/ ./data/
 # Create output directories
 RUN mkdir -p frontend/public
 
-EXPOSE 8000
+EXPOSE 44400
 
-CMD ["python", "src/main.py"]
+CMD ["python", "src/api.py"]
