--- a/.env
+++ b/.env
@@ -1,14 +1,35 @@
+# Production Environment Configuration
 # Backend Configuration
 BACKEND_PORT=44400
 PYTHONPATH=/app/src
 
 # Frontend Configuration
 FRONTEND_PORT=44401
-VITE_API_URL=http://localhost:44400
+VITE_API_URL=https://your-domain.com/api
 
 # Docker Configuration
-COMPOSE_PROJECT_NAME=opencosts
+COMPOSE_PROJECT_NAME=opencosts_prod
 
 # Application Settings
-APP_ENV=development
+APP_ENV=production
 LOG_LEVEL=info
+
+# Security Settings
+CORS_ORIGINS=https://your-domain.com,https://www.your-domain.com
+API_RATE_LIMIT=100
+
+# OpenRouter API Settings
+OPENROUTER_BASE_URL=https://openrouter.ai
+REQUEST_TIMEOUT=30
+MAX_WORKERS=4
+
+# Monitoring
+HEALTH_CHECK_INTERVAL=30
+SENTRY_DSN=your-sentry-dsn-here
+
+# SSL Configuration
+SSL_CERT_PATH=/etc/nginx/ssl/cert.pem
+SSL_KEY_PATH=/etc/nginx/ssl/key.pem
+
+# Backup Configuration
+BACKUP_RETENTION_DAYS=30
